add compute score func

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from transformers import ViltProcessor, ViltForQuestionAnswering\n",
     "from PIL import Image\n",
-    "from evaluation import compute_scores\n",
+    "from compute_score import compute_score\n",
     "from tqdm import tqdm\n",
     "import os\n",
     "import json\n",
@@ -116,7 +116,7 @@
     "gts = {str(idx): gt for idx, gt in enumerate(ground_truths)}  # Chuyển ground_truths thành dictionary :v\n",
     "gen = {str(idx): [pred] for idx, pred in enumerate(predictions)}  # Chuyển predictions thành dictionary\n",
     "\n",
-    "scores = compute_scores(gts, gen)\n",
+    "scores = compute_score(gts, gen)\n",
     "print(\"Evaluation Scores:\", scores)\n",
     "\n",
     "def convert_to_serializable(obj):\n",
